--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 								<span class="pull-right">
 									<img class="img-circle img-user media-object" src="img/av1.png" alt="Profile Picture">
 								</span>
-								<div class="username hidden-xs">John Doe</div>
+								<div class="username hidden-xs">Andrew Tan</div>
 							</a>
 
 
