--- a/index.html
+++ b/index.html
@@ -70,7 +70,18 @@
 				<!--================================-->
 				<div class="navbar-content clearfix">
 					<ul class="nav navbar-top-links pull-left">
-
+                        <li>
+                            <a href="#">Geography 6A</a>
+                        </li>
+                        <li>
+                            <a href="#">Astronomy</a>
+                        </li>
+                        <li>
+                            <a href="#">Math Basic</a>
+                        </li>
+                        <li>
+                            <a href="#"><i class="fa fa-angle-down"></i></a>
+                        </li>
 					</ul>
 					<ul class="nav navbar-top-links pull-right">
 
@@ -83,7 +94,6 @@
 								</span>
 								<div class="username hidden-xs">Andrew Tan</div>
 							</a>
-
 
 							<div class="dropdown-menu dropdown-menu-md dropdown-menu-right with-arrow panel-default">
 
